# PracticeCamera

./: README.md  build.gradle  gradle.properties  settings.gradle
inlinecamera/: build.gradle
inlinecamera/src/main/: AndroidManifest.xml
inlinecamera/src/main/assets/: go.sh
inlinecamera/src/main/cpp/: CMakeLists.txt  go.c  go.h  mylib.c  mylib.h
inlinecamera/src/main/java/com/example/inlinecamera/: MainActivity.java  MyLib.java  MySdk.java
inlinecamera/src/main/res/layout/: activity_main.xml
inlinecamera/src/main/res/values/: strings.xml  themes.xml
inlinecamera/src/main/res/values-night/: themes.xml
newcamera/: build.gradle
newcamera/src/androidTest/java/com/example/newcamera/: ExampleInstrumentedTest.java
newcamera/src/main/: AndroidManifest.xml
newcamera/src/main/java/com/example/newcamera/: CameraHook.java  HomeActivity.java
newcamera/src/main/res/layout/: act_home.xml
newcamera/src/main/res/values/: strings.xml  themes.xml
newcamera/src/main/res/values-night/: themes.xml
